Set music icon image height in plan div to prevent stretching

--- a/Basic/order-sum/src/styles.css
+++ b/Basic/order-sum/src/styles.css
@@ -52,6 +52,10 @@ body {
     margin: 0;
 }
 
+.plan img {
+    height: 63%;
+}
+
 .plan {
     width: 75%;
     display: flex;
